Optimize startup time
I try to optimize the startup time by applying the following changes:

- Change memory settings to prevent full GC
- Remove the quartz plugin and use java.util.Timer instead because I
  think the plugin is too oversized for our purpose

Furthermore, I upgrade the plugins codenarc and asset-pipeline.

At last, I fix a dependency bug in jquery-ui-springcrm.less.